--- a/.hgignore
+++ b/.hgignore
@@ -1,9 +1,12 @@
 syntax: glob
-*.pyc
-*~
-*.swp
-*.DS_Store
 *.orig
+*.swp
+*.pyc
+*.DS_Store
+*~
 *.log
 .coverage
-doc/_build/*
+nosetests.xml
+syntax: regexp
+(target|build|dist)/.*
+
