Add dep on python-catkin-pkg.

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,4 +1,4 @@
 [DEFAULT]
-Depends: python-rospkg, python-yaml
+Depends: python-rospkg, python-yaml, python-catkin-pkg
 Suite: lucid oneiric precise quantal
 XS-Python-Version: >= 2.6
