Added dependency to rosdistro in setup.py and stdeb.cfg

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,4 +1,4 @@
 [DEFAULT]
-Depends: python-rospkg, python-yaml, python-catkin-pkg
+Depends: python-rospkg, python-yaml, python-catkin-pkg, python-rosdistro
 Suite: lucid oneiric precise quantal raring wheezy
 XS-Python-Version: >= 2.6
