--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,5 +1,5 @@
 [DEFAULT]
-Package: python-rosdistro
+Package: python-rosinstall-generator
 Depends: python-argparse, python-catkin-pkg, python-rospkg, python-yaml
 Suite: lucid oneiric precise quantal raring wheezy
 XS-Python-Version: >= 2.6
