--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,4 +1,4 @@
 [DEFAULT]
 Depends: python-rospkg, python-yaml, python-catkin-pkg, python-rosdistro (>= 0.2.1)
-Suite: lucid oneiric precise quantal raring wheezy
+Suite: lucid oneiric precise quantal raring saucy wheezy
 XS-Python-Version: >= 2.6
