--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,5 +1,5 @@
 [DEFAULT]
 Package: python-rosinstall-generator
 Depends: python-argparse, python-catkin-pkg, python-rosdistro (>= 0.2.13), python-rospkg, python-yaml
-Suite: lucid oneiric precise quantal raring wheezy
+Suite: lucid oneiric precise quantal raring saucy wheezy
 XS-Python-Version: >= 2.6
