--- a/stdeb2.cfg
+++ b/stdeb2.cfg
@@ -1,5 +1,4 @@
 [DEFAULT]
 Package: python-rosinstall-generator
 Depends: python-argparse, python-catkin-pkg (>= 0.1.28), python-rosdistro (>= 0.3.4), python-rospkg, python-yaml
-Suite: lucid oneiric precise quantal raring saucy trusty wheezy jessie
-XS-Python-Version: >= 2.6
+Suite: oneiric precise quantal raring saucy trusty wheezy jessie
