--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,6 +1,5 @@
 [DEFAULT]
-Package: python-rosdep
-Package3: python3-rosdep
 Depends: python-rospkg, python-yaml, python-catkin-pkg, python-rosdistro (>= 0.3.0)
-Depends3: python3 (>= 3.2), python3-rospkg, python3-yaml, python3-catkin-pkg, python3-rosdistro (>= 0.3.0)
+Depends3: python3-rospkg, python3-yaml, python3-catkin-pkg, python3-rosdistro (>= 0.3.0)
 Suite: oneiric precise quantal raring saucy trusty utopic wheezy jessie
+X-Python3-Version: >= 3.2
