--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,6 +1,5 @@
 [DEFAULT]
-Package: python-rosinstall-generator
-Package3: python3-rosinstall-generator
 Depends: python-argparse, python-catkin-pkg (>= 0.1.28), python-rosdistro (>= 0.3.4), python-rospkg, python-yaml
-Depends3: python3 (>= 3.3), python3-catkin-pkg (>= 0.1.28), python3-rosdistro (>= 0.3.4), python3-rospkg, python3-yaml
+Depends3: python3-catkin-pkg (>= 0.1.28), python3-rosdistro (>= 0.3.4), python3-rospkg, python3-yaml
 Suite: oneiric precise quantal raring saucy trusty utopic wheezy jessie
+X-Python3-Version: >= 3.2
