--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,5 +1,5 @@
 [DEFAULT]
-Depends: python-rospkg, python-yaml, python-catkin-pkg, python-rosdistro (>= 0.4.0)
-Depends3: python3-rospkg, python3-yaml, python3-catkin-pkg, python3-rosdistro (>= 0.4.0)
+Depends: python-rospkg (>= 1.0.34), python-yaml, python-catkin-pkg, python-rosdistro (>= 0.4.0)
+Depends3: python3-rospkg (>= 1.0.34), python3-yaml, python3-catkin-pkg, python3-rosdistro (>= 0.4.0)
 Suite: oneiric precise quantal raring saucy trusty utopic vivid wheezy jessie
 X-Python3-Version: >= 3.2
