Add conflicts to stdeb.cfg

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,5 +1,7 @@
 [DEFAULT]
 Depends: python-rospkg (>= 1.0.34), python-yaml, python-catkin-pkg, python-rosdistro (>= 0.4.0)
 Depends3: python3-rospkg (>= 1.0.34), python3-yaml, python3-catkin-pkg, python3-rosdistro (>= 0.4.0)
+Conflicts: python3-rosdep
+Conflicts3: python-rosdep
 Suite: oneiric precise quantal raring saucy trusty utopic vivid wheezy jessie
 X-Python3-Version: >= 3.2
