Add conflicts to stdeb.cfg

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,5 +1,7 @@
 [DEFAULT]
 Depends: python-argparse, python-catkin-pkg (>= 0.1.28), python-rosdistro (>= 0.3.4), python-rospkg, python-yaml
 Depends3: python3-catkin-pkg (>= 0.1.28), python3-rosdistro (>= 0.3.4), python3-rospkg, python3-yaml
+Conflicts: python3-rosinstall-generator
+Conflicts3: python-rosinstall-generator
 Suite: oneiric precise quantal raring saucy trusty utopic vivid wheezy jessie
 X-Python3-Version: >= 3.2
