add Ubuntu Zesty(17.04) and Debian Stretch(9)

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -3,5 +3,5 @@ Depends: python-argparse, python-catkin-pkg (>= 0.1.28), python-rosdistro (>= 0.
 Depends3: python3-catkin-pkg (>= 0.1.28), python3-rosdistro (>= 0.5.0), python3-rospkg, python3-yaml
 Conflicts: python3-rosinstall-generator
 Conflicts3: python-rosinstall-generator
-Suite: oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety wheezy jessie
+Suite: oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety zesty wheezy jessie stretch
 X-Python3-Version: >= 3.2
