--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 # command to install dependencies
 install:
 # develop seems to be required by travis since 02/2013
+  - sudo apt-get install python-distutils-extra
   - pip install PyYAML argparse rospkg vcstools catkin_pkg python-dateutil rosdistro python-apt
   - python setup.py build develop
   - pip install nose coverage
