try debian jessie version

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ install:
   - sudo apt-get install build-essential git-core bzr intltool libapt-pkg-dev
   - pip install setuptools sphinx
   - cd /tmp && bzr branch lp:python-distutils-extra && cd python-distutils-extra && python setup.py build install
-#  - git clone git://git.launchpad.net/python-apt -b ubuntu/trusty /tmp/python-apt && cd /tmp/python-apt && python setup.py build install
-  - pip install PyYAML argparse rospkg vcstools catkin_pkg python-dateutil rosdistro python-apt
+  - pip install git+https://anonscm.debian.org/cgit/apt/python-apt.git@debian/jessie
+  - pip install PyYAML argparse rospkg vcstools catkin_pkg python-dateutil rosdistro
   - cd $TRAVIS_BUILD_DIR
   - python setup.py build develop
   - pip install nose coverage
