--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
   - python --version
   - pip install PyYAML argparse rospkg vcstools catkin_pkg python-dateutil rosdistro
   - pip install -e .
-  - pip install nose coverage flake8 mock
+  - pip install nose coverage flake8 mock codecov
 before_script:
   # stop the build if there are Python syntax errors or undefined names
   - if [ "${TRAVIS_PYTHON_VERSION}" != "2.6" ] ; then flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics; fi
@@ -32,5 +32,7 @@ before_script:
 # command to run tests
 script:
   - nosetests --with-coverage --cover-package=rosdep2 --with-xunit test
+after_script:
+  - codecov
 notifications:
   email: false
