also python -m for codecov
Signed-off-by: William Woodall <william@osrfoundation.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,6 @@ install:
 script:
   - python -m nose --with-coverage --cover-package=rosdep2 --with-xunit test
 after_script:
-  - codecov
+  - python -m codecov
 notifications:
   email: false
