--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -4,5 +4,5 @@ Depends3: ca-certificates, python3-rospkg (>= 1.0.37), python3-yaml, python3-cat
 Conflicts: python3-rosdep, python-rosdep2, python3-rosdep2
 Conflicts3: python-rosdep, python-rosdep2, python3-rosdep2
 Copyright-File: LICENSE
-Suite: oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety zesty artful bionic wheezy jessie stretch buster
-X-Python3-Version: >= 3.2
+Suite: trusty utopic vivid wily xenial yakkety zesty artful bionic jessie stretch buster
+X-Python3-Version: >= 3.4
