--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,8 +1,27 @@
-[DEFAULT]
-Depends: ca-certificates, python-rospkg (>= 1.1.10), python-yaml, python-catkin-pkg (>= 0.4.0), python-rosdistro (>= 0.7.5), sudo
-Depends3: ca-certificates, python3-rospkg (>= 1.1.10), python3-yaml, python3-catkin-pkg (>= 0.4.0), python3-rosdistro (>= 0.7.5), sudo
+[rosdep]
+; rosdep-modules same version as in:
+; - setup.py
+; - src/rosdep2/_version.py
+Depends: python-rosdep-modules (>= 0.18.0)
+; rosdep-modules same version as in:
+; - setup.py
+; - src/rosdep2/_version.py
+Depends3: python3-rosdep-modules (>= 0.18.0)
 Conflicts: python3-rosdep, python-rosdep2, python3-rosdep2
 Conflicts3: python-rosdep, python-rosdep2, python3-rosdep2
 Copyright-File: LICENSE
 Suite: xenial yakkety zesty artful bionic cosmic disco eoan jessie stretch buster
 X-Python3-Version: >= 3.4
+Setup-Env-Vars: SKIP_PYTHON_MODULES=1
+
+[rosdep_modules]
+Depends: ca-certificates, python-rospkg (>= 1.1.10), python-yaml, python-catkin-pkg (>= 0.4.0), python-rosdistro (>= 0.7.5), sudo
+Depends3: ca-certificates, python3-rospkg (>= 1.1.10), python3-yaml, python3-catkin-pkg (>= 0.4.0), python3-rosdistro (>= 0.7.5), sudo
+Conflicts: python-rosdep (<< 0.18.0), python-rosdep2
+Conflicts3: python3-rosdep (<< 0.18.0), python3-rosdep2
+Replaces: python-rosdep (<< 0.18.0)
+Replaces3: python3-rosdep (<< 0.18.0)
+Copyright-File: LICENSE
+Suite: xenial yakkety zesty artful bionic cosmic disco eoan jessie stretch buster
+X-Python3-Version: >= 3.4
+Setup-Env-Vars: SKIP_PYTHON_SCRIPTS=1
