--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -11,6 +11,7 @@ Conflicts: python3-rosdep, python-rosdep2, python3-rosdep2
 Conflicts3: python-rosdep, python-rosdep2, python3-rosdep2
 Copyright-File: LICENSE
 Suite: xenial yakkety zesty artful bionic cosmic disco eoan jessie stretch buster
+Suite3: xenial yakkety zesty artful bionic cosmic disco eoan focal jessie stretch buster
 X-Python3-Version: >= 3.4
 Setup-Env-Vars: SKIP_PYTHON_MODULES=1
 
@@ -23,5 +24,6 @@ Replaces: python-rosdep (<< 0.18.0)
 Replaces3: python3-rosdep (<< 0.18.0)
 Copyright-File: LICENSE
 Suite: xenial yakkety zesty artful bionic cosmic disco eoan jessie stretch buster
+Suite3: xenial yakkety zesty artful bionic cosmic disco eoan focal jessie stretch buster
 X-Python3-Version: >= 3.4
 Setup-Env-Vars: SKIP_PYTHON_SCRIPTS=1
