--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
     - os: linux
       python: 2.7
     - os: linux
-      python: 3.4
+      python: 3.4   # When support for 3.4 is removed unpin the PyYAML version below.
     - os: linux
       python: 3.5
     - os: linux
@@ -27,6 +27,7 @@ matrix:
 install:
   - source .travis/install.sh
   - python --version
+  - if [ $TRAVIS_PYTHON_VERSION == "3.4" ]; then python -m pip install PyYAML==5.2; fi # Forcing PyYAML 5.2 while we retain Python 3.4 support PyYAML 5.3 and higher does not support Python 3.4
   - python -m pip install PyYAML argparse rospkg vcstools catkin_pkg python-dateutil rosdistro
   - python -m pip install -e .
   - python -m pip install nose coverage flake8 mock codecov
