--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ matrix:
       python: 3.8
     - os: osx
       language: generic
-      env: PYTHON_INSTALLER=brew
+      env:
+        - PYTHON_INSTALLER=brew
+        - PIP_USER_FLAG="--user"
     - os: osx
       language: generic
       env: PYTHON_INSTALLER=pyenv TRAVIS_PYTHON_VERSION=2.7.14
@@ -28,9 +30,9 @@ install:
   - source .travis/install.sh
   - python --version
   - if [ $TRAVIS_PYTHON_VERSION == "3.4" ]; then python -m pip install PyYAML==5.2; fi # Forcing PyYAML 5.2 while we retain Python 3.4 support PyYAML 5.3 and higher does not support Python 3.4
-  - python -m pip install PyYAML argparse rospkg vcstools catkin_pkg python-dateutil rosdistro
-  - python -m pip install -e .
-  - python -m pip install nose coverage flake8 mock codecov
+  - python -m pip install $PIP_USER_FLAG PyYAML argparse rospkg vcstools catkin_pkg python-dateutil rosdistro
+  - python -m pip install $PIP_USER_FLAG -e .
+  - python -m pip install $PIP_USER_FLAG nose coverage flake8 mock codecov
 # command to run tests
 script:
   - python -m nose --with-coverage --cover-package=rosdep2 --with-xunit test
