Add action-jack branch to test actions.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,8 @@
 name: rosdep
 
 on:
-  push: [master]
-  pull_request: [master]
+  push: [action-jack, master]
+  pull_request: [action-jack, master]
 
 jobs:
     build:
