--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ jobs:
       strategy:
         matrix:
           os: [ubuntu-16.04, ubuntu-18.04, macos-latest, windows-latest]
-          python: [2.7, 3.4, 3.5, 3.6, 3.7, 3.8]
+          python: [2.7, 3.5, 3.6, 3.7, 3.8]
           exclude:
           - os: ubuntu-16.04
             python: 3.6
