--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,8 +15,8 @@ jobs:
             python: 3.7
           - os: ubuntu-16.04
             python: 3.8
-          - os: macos-latest
-            python: 3.4
+          - os: ubuntu-18.04
+            python: 3.5
           - os: macos-latest
             python: 3.5
           - os: macos-latest
