--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,8 +6,8 @@ jobs:
     build:
       strategy:
         matrix:
-          os: [ubuntu-16.04, ubuntu-18.04, macos-latest]
-          python: [2.7, 3.5, 3.6, 3.7, 3.8]
+          os: [ubuntu-16.04, ubuntu-18.04, ubuntu-20.04, macos-latest]
+          python: [2.7, 3.5, 3.6, 3.7, 3.8, 3.9]
           exclude:
           - os: ubuntu-16.04
             python: 3.6
@@ -15,6 +15,8 @@ jobs:
             python: 3.7
           - os: ubuntu-16.04
             python: 3.8
+          - os: ubuntu-16.04
+            python: 3.9  
           - os: ubuntu-18.04
             python: 3.5
           - os: macos-latest
