--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,7 @@ jobs:
     build:
       strategy:
         matrix:
-          os: [ubuntu-16.04, ubuntu-18.04, ubuntu-20.04, macos-latest]
+          os: [ubuntu-16.04, ubuntu-18.04, macos-latest]
           python: [2.7, 3.5, 3.6, 3.7, 3.8, 3.9]
           exclude:
           - os: ubuntu-16.04
