--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,12 @@ catkin-pkg==0.4.23
 certifi==2020.12.5
 distro==1.5.0
 docutils==0.17.1
+flake8==3.9.1
+mccabe==0.6.1
 mock==4.0.3
 nose==1.3.7
+pycodestyle==2.7.0
+pyflakes==2.3.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 PyYAML==5.4.1
