--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - source .travis/install.sh
   - python --version
   - if [ $TRAVIS_PYTHON_VERSION == "3.4" ]; then python -m pip install PyYAML==5.2; fi # Forcing PyYAML 5.2 while we retain Python 3.4 support PyYAML 5.3 and higher does not support Python 3.4
-  - python -m pip install $PIP_USER_FLAG PyYAML argparse rospkg vcstools catkin_pkg python-dateutil rosdistro
+  - python -m pip install $PIP_USER_FLAG PyYAML argparse certifi rospkg vcstools catkin_pkg python-dateutil rosdistro
   - python -m pip install $PIP_USER_FLAG -e .
   - python -m pip install $PIP_USER_FLAG nose coverage flake8 mock codecov
 # command to run tests
