--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,9 +10,17 @@ jobs:
     build:
       strategy:
         matrix:
-          os: [ubuntu-18.04, macos-latest]
+          os: [ubuntu-18.04, ubuntu-20.04, macos-latest]
           python: [2.7, 3.6, 3.7, 3.8, 3.9]
           exclude:
+          - os: ubuntu-20.04
+            python: 2.7
+          - os: ubuntu-20.04
+            python: 3.5
+          - os: ubuntu-20.04
+            python: 3.6
+          - os: ubuntu-20.04
+            python: 3.7
           - os: macos-latest
             python: 3.6
       name: rosdep tests
