Update target package for tests
These tests currently look for python-dev, which is no longer a package
in Ubuntu Focal. This change updates the target package for Ubuntu to
look for Python 3, and updates Debian, Fedora, and RHEL to do the same.

--- a/test/tree/ros/rosdep.yaml
+++ b/test/tree/ros/rosdep.yaml
@@ -6,12 +6,12 @@ testtinyxml:
       uri: 'http://kforge.ros.org/rosrelease/viewvc/sourcedeps/tinyxml/tinyxml-2.6.2-1.rdmanifest'
       md5sum: 13760e61e08c9004493c302a16966c42
 testpython:
-  ubuntu: python-dev
-  debian: python-dev
+  ubuntu: python3-dev
+  debian: python3-dev
   arch: python
   opensuse: python-devel
-  fedora: python-devel
-  rhel: python-devel
+  fedora: python3-devel
+  rhel: python3-devel
   macports: python26 python_select
   gentoo: python
   cygwin: python
