--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
           python -m pip install --upgrade pip setuptools
           python -m pip install PyYAML argparse rospkg vcstools catkin_pkg python-dateutil rosdistro
           python -m pip install -e .
-          python -m pip install nose coverage flake8 mock codecov
+          python -m pip install nose coverage flake8 flake8-comprehensions mock codecov
       - name: Run tests
         run: |
           python -m nose --with-coverage --cover-package=rosdep2 --with-xunit test
