Run tests against Python 3.10 (#883)
Also drop PR branch wildcard to align with other ROS infrastructure CI
workflows.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,14 +4,13 @@ on:
   push:
     branches: [greenroom]
   pull_request:
-    branches: ['*']
 
 jobs:
     build:
       strategy:
         matrix:
           os: [ubuntu-latest, macos-latest]
-          python: [3.8, 3.9]
+          python: [3.8, 3.9, 3.10]
       name: rosdep tests
       runs-on: ${{matrix.os}}
 
