--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,10 +22,7 @@ jobs:
           python-version: ${{matrix.python}}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools
-          python -m pip install PyYAML argparse rospkg vcstools catkin_pkg python-dateutil rosdistro
-          python -m pip install -e .
-          python -m pip install pytest pytest-cov flake8 flake8-comprehensions mock codecov
+          python -m pip install -U -e .[test] codecov pytest-cov
       - name: Run tests
         run: |
           python -m pytest test --cov
