Mark linter tests and tests which require network (#884)
Marking tests appropriately will allow us to be more selective about
what tests are run.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,10 @@
 filterwarnings =
     ignore:deprecated.( use rosdistro instead| see REP137 and rosdistro):UserWarning:rosdep2
 junit_suite_name = rosdep
+markers =
+  flake8
+  linter
+  online
 
 [coverage:run]
 source = rosdep2
