--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ jobs:
       strategy:
         matrix:
           os: [ubuntu-latest, macos-latest]
-          python: [3.8, 3.9, 3.10]
+          python: ['3.8', '3.9', '3.10']
       name: rosdep tests
       runs-on: ${{matrix.os}}
 
