Use setup.cfg to configure flake8 !has regression!
This makes flake8's configuration more discoverable and easier to
use with other tools (IDE, etc.).

Regression: it seems that "max-complexity" wasn't properly enforced,
now a lot of code is detected as too complex. (warn if > 10, max is 25)
We may need to adjust the value.

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,5 +7,23 @@ markers =
   linter
   online
 
+[flake8]
+exclude =
+  conf.py,
+  .venv,
+ignore =
+  C402,  # ignore presence of unnecessary generators
+  C405,  # ignore presence of unnecessary literals
+  C407,  # ignore presence of unnecessary comprehensions
+  C408,  # ignore presence of unnecessary tuple/list/dict
+  D,  # ignore documentation related warnings
+  F401,  # ignore presence of unused imports
+  F841,  # ignore presence of unused variables
+  I,  # ignore import order related warnings
+  N802,  # ignore presence of upper case in function names
+  W504,  # ignore line breaks after binary operator (new rule added in 2018)
+max-line-length = 200
+max-complexity = 10
+
 [coverage:run]
 source = rosdep2
