change flake8 config comment for flake8>=6.0
Inline comments are not allowed in flake8>=6.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,16 +12,26 @@ exclude =
   conf.py,
   .venv,
 ignore =
-  C402,  # ignore presence of unnecessary generators
-  C405,  # ignore presence of unnecessary literals
-  C407,  # ignore presence of unnecessary comprehensions
-  C408,  # ignore presence of unnecessary tuple/list/dict
-  D,  # ignore documentation related warnings
-  F401,  # ignore presence of unused imports
-  F841,  # ignore presence of unused variables
-  I,  # ignore import order related warnings
-  N802,  # ignore presence of upper case in function names
-  W504,  # ignore line breaks after binary operator (new rule added in 2018)
+  # ignore presence of unnecessary generators
+  C402,
+  # ignore presence of unnecessary literals
+  C405,
+  # ignore presence of unnecessary comprehensions
+  C407,
+  # ignore presence of unnecessary tuple/list/dict
+  C408,
+  # ignore documentation related warnings
+  D,
+  # ignore presence of unused imports
+  F401,
+  # ignore presence of unused variables
+  F841,
+  # ignore import order related warnings
+  I,
+  # ignore presence of upper case in function names
+  N802,
+  # ignore line breaks after binary operator (new rule added in 2018)
+  W504,
 max-line-length = 200
 max-complexity = 10
 
