--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ jobs:
       strategy:
         matrix:
           os: [ubuntu-latest, macos-latest]
-          python: ['3.7', '3.8', '3.9', '3.10']
+          python: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
           include:
           - os: ubuntu-20.04
             python: '3.6'
