--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,36 +1,18 @@
-name: rosdep-ci
+---
+name: Run tests
 
-on:
+on:  # yamllint disable-line rule:truthy
   push:
-    branches: [master]
+    branches: ['master']
   pull_request:
 
 jobs:
-    build:
-      strategy:
-        matrix:
-          os: [ubuntu-latest, macos-latest]
-          python: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
-          include:
-          - os: ubuntu-20.04
-            python: '3.6'
-      name: rosdep tests
-      runs-on: ${{matrix.os}}
-
-      steps:
+  pytest:
+    uses: ros-infrastructure/ci/.github/workflows/pytest.yaml@main
+    with:
+      matrix-filter: del(.matrix.os[] | select(contains("windows")))
+  yamllint:
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{matrix.python}}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{matrix.python}}
-      - name: Install dependencies
-        run: |
-          python -m pip install -U -e .[test] codecov pytest-cov
-      - name: Run tests
-        run: |
-          python -m pytest test --cov
-      - name: Check coverage
-        run: |
-          python -m codecov
-
-
+      - run: yamllint -f github .
