Re-enable codecov upload
Fixes 20a28a8edd20de4a2f4d1002c36eaf9fac0f92bd

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,7 @@ jobs:
   pytest:
     uses: ros-infrastructure/ci/.github/workflows/pytest.yaml@main
     with:
+      codecov: true
       matrix-filter: del(.matrix.os[] | select(contains("windows")))
   yamllint:
     runs-on: ubuntu-latest
